--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,20 @@ Pillow>=10.0.0
 python-dotenv>=1.0.0
 tqdm>=4.65.0
 
-# ColPali and related
+# ColPali and related dependencies
 colpali-engine>=0.2.0
 transformers>=4.36.0
+accelerate>=0.20.0
+sentencepiece>=0.1.99
 
 # Additional utilities
 numpy>=1.24.0
+pandas>=2.0.0
+
+# Note: For pdf2image to work, you need to install poppler-utils:
+# - Ubuntu/Debian: sudo apt-get install poppler-utils
+# - macOS: brew install poppler
+# - Windows: Download from https://github.com/oschwartz10612/poppler-windows/releases/
 
 
 
